--- a/AirportUWPApp/AirportUWPApp/AirportUWPApp.csproj
+++ b/AirportUWPApp/AirportUWPApp/AirportUWPApp.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Models\Stewardess.cs" />
     <Compile Include="Models\Ticket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\CountService.cs" />
     <Compile Include="Services\CrewService.cs" />
     <Compile Include="Services\DepartureService.cs" />
     <Compile Include="Services\FlightService.cs" />
@@ -119,12 +120,16 @@
     <Compile Include="ViewModels\CrewVM.cs" />
     <Compile Include="ViewModels\DepartureVM.cs" />
     <Compile Include="ViewModels\FlightVM.cs" />
-    <Compile Include="ViewModels\NotifyTaskCompletion.cs" />
+    <Compile Include="ViewModels\NotifyTask.cs" />
     <Compile Include="ViewModels\PilotVM.cs" />
     <Compile Include="ViewModels\PlaneTypeVM.cs" />
     <Compile Include="ViewModels\PlaneVM.cs" />
     <Compile Include="ViewModels\StewardessVM.cs" />
+    <Compile Include="ViewModels\TestVM.cs" />
     <Compile Include="ViewModels\TicketVM.cs" />
+    <Compile Include="Views\TestPage.xaml.cs">
+      <DependentUpon>TestPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\CrewView.xaml.cs">
       <DependentUpon>CrewView.xaml</DependentUpon>
     </Compile>
@@ -175,6 +180,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="Views\TestPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\CrewView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -213,7 +222,7 @@
       <Version>5.2.6</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
-      <Version>6.1.5</Version>
+      <Version>6.1.7</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup />
